--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -181,7 +181,6 @@ body {
 
   .main-content-wrap {
     max-width: none !important;
-    padding: 2rem 3rem !important;
   }
 
   .main-content {
@@ -226,6 +225,7 @@ body {
     background: $gray-50 !important;
     border-bottom: 1px solid $gray-200 !important;
     min-height: 56px !important;
+    width: 100% !important;
   }
 
   .site-title {
@@ -323,6 +323,16 @@ body {
   background: $gray-50;
   border-right: 1px solid $gray-200;
   overflow: hidden !important;
+  width: 15.5rem !important;
+  flex-shrink: 0 !important;
+
+  + .main {
+    margin-left: 15.5rem !important;
+  }
+
+  .site-header {
+    width: 100% !important;
+  }
   
   * {
     box-sizing: border-box !important;
